<resources>
    <string name="app_name">Mercury Panel</string>
    <string name="overview">Overview</string>
    <string name="domain_blocker">Domain Blocker</string>
    <string name="vpn">VPN Servers</string>
    <string name="dns_servers">DNS Servers</string>
    <string name="firewall">Firewall</string>
    <string name="block_lists">Block Lists</string>
    <string name="black_white_lists">BLK / WHI Lists</string>
    <string name="query_log">Query Log</string>
    <string name="no_data">No Data Found</string>
    <string name="domains_on_blocklist">Domains On Blocklist</string>
    <string name="total_queries">Total Queries</string>
    <string name="queries_blocked">Queries Blocked</string>
    <string name="percent_blocked">% Blocked</string>
    <string name="add_blocklist_url_title">Enter the URL of a new block list</string>
    <string name="blocklist_urls_title">Blocklist URL\'s</string>
    <string name="blacklist_domains">Blacklist Domains</string>
    <string name="whitelist_domains">Whitelist Domains</string>
    <string name="add_blacklist_domain_title">Add a domain to the blacklist</string>
    <string name="add_whitelist_domain_title">Add a domain to the whitelist</string>
    <string name="domain_example">Ex: www.google.com</string>
    <string name="time_title">Time</string>
    <string name="domain_title">Domain</string>
    <string name="status_title">Status</string>
    <string name="last_5_minutes_title">Queries over last 5 minutes</string>
    <string name="last_10_minutes_title">Queries over last 10 minutes</string>
    <string name="last_1_hour_title">Queries over last hour</string>
    <string name="last_6_hours_title">Queries over last 6 hours</string>
    <string name="all_time_title">Queries from beginning of time</string>
    <string name="last_hour_title">Queries over last hour</string>
    <string name="custom_1_ipv4_title">Custom 1 (IPv4)</string>
    <string name="custom_2_ipv4_title">Custom 2 (IPv4)</string>
    <string name="custom_3_ipv6_title">Custom 3 (IPv6)</string>
    <string name="custom_4_ipv6_title">Custom 4 (IPv6)</string>
    <string name="vpn_info">VPN Info</string>
    <string name="status_offline">Offline</string>
    <string name="status_online">Online!</string>
    <string name="vpn_server">VPN not setup</string>
    <string name="dns_ip_address">DNS not setup</string>
    <string name="firewall_info">Firewall Info</string>
    <string name="network_info_title">Network Info</string>
    <string name="ipv4_title">IPV4 Address</string>
    <string name="ipv6_title">IPV6 Address</string>
    <string name="system_info_title">System Info</string>
    <string name="cpu_usage_title">CPU Usage</string>
    <string name="memory_usage_title">Memory Usage</string>
    <string name="device_temperature_title">Device Temperature</string>
    <string name="up_time">Application Up-Time</string>
    <string name="temporarily_disable">Temporarily Disable</string>
    <string name="domain_blocker_info">Domain Blocker Info</string>
    <string name="dns_info">DNS Info</string>
    <string name="disable_30_seconds">30 Seconds</string>
    <string name="disable_5_minutes">5 Minutes</string>
    <string name="disable_10_minutes">10 Minutes</string>
    <string name="disable_1_hour">1 Hour</string>
    <string name="disable_entire_application">Disable Entire Application</string>
    <string name="danger_zone">Danger Zone!</string>
    <string name="warning_message">Using this feature can cause some unintended side effects for various applications. Use at your own risk.</string>
    <string name="application_name">Application Name</string>
    <string name="vpn_file_title">VPN File Type</string>
    <string name="vpn_url">URL</string>
    <string name="url_temp">https://</string>
    <string name="or">OR</string>
    <string name="use_default">Use Default VPN Server</string>
    <string name="upstream_title">Upstream</string>
    <string name="vpn_settings_title">VPN Settings</string>
    <string name="toggle_vpn">Toggle VPN</string>
    <string name="downstream_title">Downstream</string>
    <string name="change_vpn_server_title">Change VPN Server</string>
    <string name="current_vpn_server_title">Current VPN Server</string>
    <string name="degree_symbol_celsius">°C</string>
    <string name="percent_symbol">%</string>
    <string name="connecting">Mercury Panel is connecting…</string>
    <string name="connected">Mercury Panel is connected!</string>
    <string name="disconnected">Mercury Panel is disconnected!</string>
    <string name="chart_title">Queries over 6 Hours</string>
    <string name="gathering">"We're gathering domains from: "</string>
    <string name="removing">"We're removing domains from: "</string>
    <string name="please_wait">Please Wait…</string>
    <string name="annoying_domain">Ex: annoyingWeb.site</string>
    <string name="favorable_domain">Ex: blockedWeb.site</string>
    <string name="blocklist_example">Ex: blocklist.site/app/dl/ads</string>
</resources>
