<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/vpn_file_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/light_gray_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vpn_file_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_gray_border"
                android:padding="8dp"
                android:text="@string/vpn_file_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vpn_url_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/vpn_url" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

<!--                    <EditText-->
<!--                        android:id="@+id/vpn_url"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/url_temp"-->
<!--                        android:layout_marginStart="8dp"-->
<!--                        android:layout_weight="1"/>-->

                    <ImageButton
                        android:id="@+id/vpn_url_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        app:srcCompat="@android:drawable/ic_menu_add" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/gota_give_a_man_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/or" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/use_default"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:layout_weight="1"
                        android:text="@string/use_default" />

                    <ImageButton
                        android:id="@+id/vpn_default_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        app:srcCompat="@android:drawable/ic_menu_add"/>

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vpn_settings_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/light_gray_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vpn_settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_gray_border"
                android:padding="8dp"
                android:text="@string/vpn_settings_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/toggle_vpn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="8dp"
                    android:layout_weight="1"
                    android:text="@string/toggle_vpn" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/light_gray_border"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/current_vpn_server_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/current_vpn_server_title" />

                    <TextView
                        android:id="@+id/current_vpn_server"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/no_data" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:baselineAligned="false"
                    android:background="@drawable/light_gray_border">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight=".5">

                        <TextView
                            android:id="@+id/upstream_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="8dp"
                            android:text="@string/upstream_title"/>

                        <TextView
                            android:id="@+id/upstream_data"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="8dp"
                            android:text="@string/no_data"/>

                    </LinearLayout>

                    <View
                        android:layout_height="match_parent"
                        android:layout_width="1dp"
                        android:background="@color/notAsLightGray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight=".5">

                        <TextView
                            android:id="@+id/downstream_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="8dp"
                            android:text="@string/downstream_title"/>

                        <TextView
                            android:id="@+id/downstream_data"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_margin="8dp"
                            android:text="@string/no_data"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/light_gray_border"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/monitoring_start_time_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/up_time" />

                    <TextView
                        android:id="@+id/up_time_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/no_data" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/red_border"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/danger_zone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/danger_zone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/change_vpn_server"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/change_vpn_server_title" />

                        <ImageButton
                            android:id="@+id/change_vpn_server_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            app:srcCompat="@android:drawable/ic_menu_add"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>